All combinations of params & preprocessing

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
@@ -23,19 +23,6 @@
      ]
     }
    ],
-   "source": [
-    "# Data import\n",
-    "from preprocessing.preprocessing import download_brfss_dataset\n",
-    "#download_brfss_dataset(\"username\", \"token\") -> insert kaggle username and api-token"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
    "source": [
     "#imports\n",
     "\n",
@@ -112,35 +99,35 @@
     "\n",
     "#label encoding oversampling\n",
     "dataset_os, target_os = get_preprocessed_brfss_dataset_label_encoded_oversampled()\n",
-    "data_train_os, data_test_os, target_train_os, target_test_os = get_train_test_split(dataset, target)\n",
+    "data_train_os, data_test_os, target_train_os, target_test_os = get_train_test_split(dataset_os, target_os)\n",
     "\n",
     "#label encoding undersampling\n",
     "dataset_us, target_us = get_preprocessed_brfss_dataset_label_encoded_undersampled()\n",
-    "data_train_us, data_test_us, target_train_us, target_test_us = get_train_test_split(dataset, target)\n",
+    "data_train_us, data_test_us, target_train_us, target_test_us = get_train_test_split(dataset_us, target_us)\n",
     "\n",
     "#one hot encoding (1) - target not one hot encoded\n",
     "dataset_oh, target_oh = get_preprocessed_brfss_dataset_one_hot_encoded()\n",
-    "data_train_oh, data_test_oh, target_train_oh, target_test_oh = get_train_test_split(dataset, target)\n",
+    "data_train_oh, data_test_oh, target_train_oh, target_test_oh = get_train_test_split(dataset_oh, target_oh)\n",
     "\n",
     "#one hot encoding (2) - target not one hot encoded\n",
     "dataset_a_oh, target_a_oh = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns()\n",
-    "data_train_a_oh, data_test_a_oh, target_train_a_oh, target_test_a_oh = get_train_test_split(dataset, target)\n",
+    "data_train_a_oh, data_test_a_oh, target_train_a_oh, target_test_a_oh = get_train_test_split(dataset_a_oh, target_a_oh)\n",
     "\n",
     "#one hot encoding (1) - target not one hot encoded + oversampling\n",
     "dataset_oh_os, target_oh_os = get_preprocessed_brfss_dataset_one_hot_encoded_oversampled()\n",
-    "data_train_oh_os, data_test_oh_os, target_train_oh_os, target_test_oh_os = get_train_test_split(dataset, target)\n",
+    "data_train_oh_os, data_test_oh_os, target_train_oh_os, target_test_oh_os = get_train_test_split(dataset_oh_os, target_oh_os)\n",
     "\n",
     "#one hot encoding (2) - target not one hot encoded + oversampling\n",
     "dataset_a_oh_os, target_a_oh_os = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_oversampled()\n",
-    "data_train_a_oh_os, data_test_a_oh_os, target_train_a_oh_os, target_test_a_oh_os = get_train_test_split(dataset, target)\n",
+    "data_train_a_oh_os, data_test_a_oh_os, target_train_a_oh_os, target_test_a_oh_os = get_train_test_split(dataset_a_oh_os, target_a_oh_os)\n",
     "\n",
     "#one hot encoding (1) - target not one hot encoded + undersampling\n",
     "dataset_oh_us, target_oh_us = get_preprocessed_brfss_dataset_one_hot_encoded_undersampled()\n",
-    "data_train_oh_us, data_test_oh_us, target_train_oh_us, target_test_oh_us = get_train_test_split(dataset, target)\n",
+    "data_train_oh_us, data_test_oh_us, target_train_oh_us, target_test_oh_us = get_train_test_split(dataset_oh_us, target_oh_us)\n",
     "\n",
     "#one hot encoding (2) - target not one hot encoded + undersampling\n",
-    "dataset_a_oh_os_us, target_a_oh_os_us = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_undersampled()\n",
-    "data_train_a_oh_os_us, data_test_a_oh_os_us, target_train_a_oh_os_us, target_test_a_oh_os_us = get_train_test_split(dataset, target)"
+    "dataset_a_oh_us, target_a_oh_us = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_undersampled()\n",
+    "data_train_a_oh_us, data_test_a_oh_us, target_train_a_oh_us, target_test_a_oh_us = get_train_test_split(dataset_a_oh_us, target_a_oh_us)"
    ],
    "metadata": {
     "collapsed": false
@@ -151,7 +138,7 @@
    "source": [
     "No we can apply a K-nearest neighbor classifier to the train data and test against the test data on how it performs by using the accuracy score.\n",
     "\n",
-    "We will do so for each combination that is listed above by applying a gridsearch estimator. The following estomators are structured by the different style of preprocessing."
+    "We will do so for each combination that is listed above by using two for loops. The following estimators are structured by the different style of preprocessing."
    ],
    "metadata": {
     "collapsed": false
@@ -168,29 +155,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k= 1 acc: 0.7846814553136959\n",
-      "k= 2 acc: 0.7489393388401129\n"
+      "k= 5 acc: 0.8357721113468115\n",
+      "k= 5 acc: 0.8348629810814321\n",
+      "k= 6 acc: 0.8322654660374909\n",
+      "k= 6 acc: 0.8322438200787913\n"
      ]
     }
    ],
    "source": [
-    "for n_neighbors in range(1,10):\n",
-    "    knn_estimator = KNeighborsClassifier(n_neighbors)\n",
-    "    knn_estimator.fit(data_train, target_train.values.ravel())\n",
-    "    diabetes_test_prediction = knn_estimator.predict(data_test)\n",
-    "    print(\"k= {} acc: {}\".format(n_neighbors, accuracy_score(target_test, diabetes_test_prediction)))"
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_tr, data_test_tr, target_train_tr, target_test_tr = get_train_test_split(data_train, target_train)\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "\n",
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_tr, target_train_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_tr, diabetes_test_prediction)))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Label Encoding + Oversampling"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -198,31 +200,279 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "knn_estimator = KNeighborsClassifier()\n",
-    "knn_estimator.get_params()\n",
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_os_tr, data_test_os_tr, target_train_os_tr, target_test_os_tr = get_train_test_split(data_train_os, target_train_os)\n",
     "\n",
-    "data_train.head(50000)\n",
-    "data_test.head(50000)\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
     "\n",
-    "params = {\n",
-    "    'n_neighbors': range (1,6),\n",
-    "    'metric': ('euclidean', 'minkowski')\n",
-    "    #'metric': ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
-    "}\n",
-    "\n",
-    "grid_search_estimator = GridSearchCV(knn_estimator, params, scoring='accuracy', cv=5, return_train_score=False)\n",
-    "grid_search_estimator.fit(data_train,target_train.values.ravel())\n",
-    "\n",
-    "results = pd.DataFrame(grid_search_estimator.cv_results_)\n",
-    "display(results)\n",
-    "\n",
-    "print(\"best score is {} with params {}\".format(grid_search_estimator.best_score_, grid_search_estimator.best_params_))"
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_os_tr, target_train_os_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_os_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_os_tr, diabetes_test_prediction)))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Label Encoding + Undersampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_us_tr, data_test_us_tr, target_train_us_tr, target_test_us_tr = get_train_test_split(data_train_us, target_train_us)\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "\n",
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_us_tr, target_train_us_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_us_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_us_tr, diabetes_test_prediction)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (1)\n",
+    "yes/no values not one hot encoded"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_oh_tr, data_test_oh_tr, target_train_oh_tr, target_test_oh_tr = get_train_test_split(data_train_oh, target_train_oh)\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "\n",
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_oh_tr, target_train_oh_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh_tr, diabetes_test_prediction)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (2)\n",
+    "all columns one hot encoded"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_a_oh_tr, data_test_a_oh_tr, target_train_a_oh_tr, target_test_a_oh_tr = get_train_test_split(data_train_a_oh, target_train_a_oh)\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "\n",
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_a_oh_tr, target_train_a_oh_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh_tr, diabetes_test_prediction)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (1) + Oversampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_oh_os_tr, data_test_oh_os_tr, target_train_oh_os_tr, target_test_oh_os_tr = get_train_test_split(data_train_oh_os, target_train_oh_os)\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "\n",
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_oh_os_tr, target_train_oh_os_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh_os_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh_os_tr, diabetes_test_prediction)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (2) + Oversampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_a_oh_os_tr, data_test_a_oh_os_tr, target_train_a_oh_os_tr, target_test_a_oh_os_tr = get_train_test_split(data_train_a_oh_os, target_train_a_oh_os)\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "\n",
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_a_oh_os_tr, target_train_a_oh_os_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh_os_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh_os_tr, diabetes_test_prediction)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (1) + Undersampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_oh_us_tr, data_test_oh_us_tr, target_train_oh_us_tr, target_test_oh_us_tr = get_train_test_split(data_train_oh_us, target_train_oh_us)\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "\n",
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_oh_us_tr, target_train_oh_us_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_oh_us_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_oh_us_tr, diabetes_test_prediction)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (2) + Undersampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#splitting data again to evaluate which parameters perform best to test then against actual test data\n",
+    "data_train_a_oh_us_tr, data_test_a_oh_us_tr, target_train_a_oh_us_tr, target_test_a_oh_us_tr = get_train_test_split(data_train_a_oh_us, target_train_a_oh_us)\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "\n",
+    "for n_neighbors in range(5,15):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=n_neighbors,metric=metric)\n",
+    "        knn_estimator.fit(data_train_a_oh_tr, target_train_a_oh_tr.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_test_a_oh_tr)\n",
+    "        print(\"k= {} metric: {} -> acc: {}\".format(n_neighbors, metric, accuracy_score(target_test_a_oh_tr, diabetes_test_prediction)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Back-Up code - can be deleted later"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Back-Up with gridsearch\n",
+    "# knn_estimator = KNeighborsClassifier()\n",
+    "# knn_estimator.get_params()\n",
+    "#\n",
+    "# data_train.head(50000)\n",
+    "# data_test.head(50000)\n",
+    "#\n",
+    "# params = {\n",
+    "#     'n_neighbors': range (1,6),\n",
+    "#     'metric': ('euclidean', 'minkowski')\n",
+    "#     #'metric': ('euclidean', 'minkowski', 'cosine', 'sqeuclidean', 'manhattan')\n",
+    "# }\n",
+    "#\n",
+    "# grid_search_estimator = GridSearchCV(knn_estimator, params, scoring='accuracy', cv=5, return_train_score=False)\n",
+    "# grid_search_estimator.fit(data_train,target_train.values.ravel())\n",
+    "#\n",
+    "# results = pd.DataFrame(grid_search_estimator.cv_results_)\n",
+    "# display(results)\n",
+    "#\n",
+    "# print(\"best score is {} with params {}\".format(grid_search_estimator.best_score_, grid_search_estimator.best_params_))"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
