small changes k_nearest_neighbors

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -43,18 +43,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "#ideas to use\n",
-    "#plot_class_frequencies(target)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "# Hyperparameter tuning and preprocessing\n",
@@ -439,7 +427,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Back-Up code - can be deleted later"
+    "# Archived code - can be deleted later"
    ],
    "metadata": {
     "collapsed": false
@@ -469,7 +457,10 @@
     "# results = pd.DataFrame(grid_search_estimator.cv_results_)\n",
     "# display(results)\n",
     "#\n",
-    "# print(\"best score is {} with params {}\".format(grid_search_estimator.best_score_, grid_search_estimator.best_params_))"
+    "# print(\"best score is {} with params {}\".format(grid_search_estimator.best_score_, grid_search_estimator.best_params_))\n",
+    "\n",
+    "#ideas to use\n",
+    "#plot_class_frequencies(target)"
    ],
    "metadata": {
     "collapsed": false
