updated knn/knc to new functions

--- a/jupyter_notebooks/k_nearest_centroid.ipynb
+++ b/jupyter_notebooks/k_nearest_centroid.ipynb
@@ -78,40 +78,31 @@
    "outputs": [],
    "source": [
     "#label encoding\n",
-    "dataset, target = get_preprocessed_brfss_dataset_label_encoded()\n",
-    "data_train, data_test, target_train, target_test = get_train_test_split(dataset, target)\n",
+    "data_train, data_test, target_train, target_test = get_preprocessed_brfss_dataset_label_encoded_train_test_split()\n",
     "\n",
     "#label encoding oversampling\n",
-    "dataset_os, target_os = get_preprocessed_brfss_dataset_label_encoded_oversampled()\n",
-    "data_train_os, data_test_os, target_train_os, target_test_os = get_train_test_split(dataset_os, target_os)\n",
+    "data_train_os, data_test_os, target_train_os, target_test_os = get_preprocessed_brfss_dataset_label_encoded_train_test_split_oversampled()\n",
     "\n",
     "#label encoding undersampling\n",
-    "dataset_us, target_us = get_preprocessed_brfss_dataset_label_encoded_undersampled()\n",
-    "data_train_us, data_test_us, target_train_us, target_test_us = get_train_test_split(dataset_us, target_us)\n",
+    "data_train_us, data_test_us, target_train_us, target_test_us = get_preprocessed_brfss_dataset_label_encoded_train_test_split_undersampled()\n",
     "\n",
     "#one hot encoding (1) - target not one hot encoded\n",
-    "dataset_oh, target_oh = get_preprocessed_brfss_dataset_one_hot_encoded()\n",
-    "data_train_oh, data_test_oh, target_train_oh, target_test_oh = get_train_test_split(dataset_oh, target_oh)\n",
+    "data_train_oh, data_test_oh, target_train_oh, target_test_oh = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split()\n",
     "\n",
     "#one hot encoding (2) - target not one hot encoded\n",
-    "dataset_a_oh, target_a_oh = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns()\n",
-    "data_train_a_oh, data_test_a_oh, target_train_a_oh, target_test_a_oh = get_train_test_split(dataset_a_oh, target_a_oh)\n",
+    "data_train_a_oh, data_test_a_oh, target_train_a_oh, target_test_a_oh = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split()\n",
     "\n",
     "#one hot encoding (1) - target not one hot encoded + oversampling\n",
-    "dataset_oh_os, target_oh_os = get_preprocessed_brfss_dataset_one_hot_encoded_oversampled()\n",
-    "data_train_oh_os, data_test_oh_os, target_train_oh_os, target_test_oh_os = get_train_test_split(dataset_oh_os, target_oh_os)\n",
+    "data_train_oh_os, data_test_oh_os, target_train_oh_os, target_test_oh_os = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_oversampled()\n",
     "\n",
     "#one hot encoding (2) - target not one hot encoded + oversampling\n",
-    "dataset_a_oh_os, target_a_oh_os = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_oversampled()\n",
-    "data_train_a_oh_os, data_test_a_oh_os, target_train_a_oh_os, target_test_a_oh_os = get_train_test_split(dataset_a_oh_os, target_a_oh_os)\n",
+    "data_train_a_oh_os, data_test_a_oh_os, target_train_a_oh_os, target_test_a_oh_os = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_oversampled()\n",
     "\n",
     "#one hot encoding (1) - target not one hot encoded + undersampling\n",
-    "dataset_oh_us, target_oh_us = get_preprocessed_brfss_dataset_one_hot_encoded_undersampled()\n",
-    "data_train_oh_us, data_test_oh_us, target_train_oh_us, target_test_oh_us = get_train_test_split(dataset_oh_us, target_oh_us)\n",
+    "data_train_oh_us, data_test_oh_us, target_train_oh_us, target_test_oh_us = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_undersampled()\n",
     "\n",
     "#one hot encoding (2) - target not one hot encoded + undersampling\n",
-    "dataset_a_oh_us, target_a_oh_us = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_undersampled()\n",
-    "data_train_a_oh_us, data_test_a_oh_us, target_train_a_oh_us, target_test_a_oh_us = get_train_test_split(dataset_a_oh_us, target_a_oh_us)"
+    "data_train_a_oh_us, data_test_a_oh_us, target_train_a_oh_us, target_test_a_oh_us = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_undersampled()"
    ],
    "metadata": {
     "collapsed": false
