implemented parameter optimization

--- a/jupyter_notebooks/support_vector_machine.ipynb
+++ b/jupyter_notebooks/support_vector_machine.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,6 @@
     "from visualization.general_plots import *\n",
     "\n",
     "from sklearn.svm import LinearSVC\n",
-    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
     "from sklearn import metrics\n",
     "\n",
     "import warnings\n",
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,24 +448,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Parameter Optimization - GridSearch \n"
+    "### Parameter Optimization\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "svm = LinearSVC()\n",
-    "\n",
-    "parameter_grid = {'C':np.arange(0.01,100,6)}\n",
-    "#'max_iter':[100, 200, 500]\n",
-    "\n",
-    "linearSVC = GridSearchCV(svm,parameter_grid,cv=5,return_train_score=True)\n",
-    "data_train, data_test, target_train, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split()\n",
-    "linearSVC.fit(data_train,target_train)\n",
-    "print(linearSVC.best_params_)"
+    "# load data\n",
+    "data_train, data_test, target_train, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to optimize the following parameters:\n",
+    "- **C**: the regularization parameter that controls the trade-off between the slack variable penalty (misclassifications) and width of the margin. A higher value results in the optimization choosing a smaller-margin hyperplane if that hyperplane does a better job of getting all the training points classified correctly. Default = 1.0\n",
+    "- **max_iter**: the maximum number of iterations to be run. Default = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try different parameter combinations\n",
+    "for c in [0.01, 0.1, 10, 100, 1000]:\n",
+    "    for iter in [200, 500, 1000, 1500, 2000]:\n",
+    "        svm = LinearSVC(C=c, max_iter=iter)\n",
+    "        svm.fit(data_train,target_train.values.ravel())\n",
+    "        test_predictions = svm.predict(data_test)\n",
+    "        print('Accuracy for C = {} and max_iter = {}: {}'.format(c, iter, metrics.accuracy_score(target_test, test_predictions)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of the 25 parameter combinations tested, the LinearSVC achieves the best accuracy of **TODO** with **TODO**."
    ]
   }
  ],
